<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context="domains.brighton.mf600.chatter.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:elevation="25dp"
            android:text="@string/welcome_back"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sign_in_img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/illustration_of_people"
            android:src="@drawable/img_people"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_title"
            app:shapeAppearanceOverlay="@style/twenty" />

        <TextView
            android:id="@+id/sign_in_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/sign_in_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_img" />

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_edittext"
            android:elevation="35dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/sign_in_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_margin="90dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_edittext"
            android:elevation="35dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/sign_in_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="60dp"
            android:background="@drawable/btn_grey"
            android:elevation="35dp"
            android:text="@string/sign_in"
            android:textColor="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>